docs: finished implementing SwaggerUI
